# konvoy

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/: release.yml
.github/scripts/: release-notes.mjs  release-notes.test.mjs
.github/workflows/: ci.yml  intellij-plugin.yml  release.yml  vscode-extension.yml
crates/konvoy-cli/: Cargo.toml
crates/konvoy-cli/src/: main.rs
crates/konvoy-cli/tests/: cli_integration.rs  locked_offline_smoke.rs
crates/konvoy-config/: Cargo.toml
crates/konvoy-config/src/: lib.rs  lockfile.rs  manifest.rs  profile.rs
crates/konvoy-engine/: Cargo.toml  build.rs
crates/konvoy-engine/src/: artifact.rs  build.rs  cache.rs  common.rs  detekt.rs  diagnostics.rs  error.rs  init.rs  lib.rs  library.rs  managed_tool.rs  plugin.rs  resolve.rs  test_build.rs  update.rs
crates/konvoy-engine/src/codegen/: managed_tool.rs  mod.rs  openapi.rs
crates/konvoy-engine/tests/: codegen_openapi.rs
crates/konvoy-konanc/: Cargo.toml
crates/konvoy-konanc/src/: detect.rs  error.rs  invoke.rs  lib.rs  toolchain.rs
crates/konvoy-targets/: Cargo.toml
crates/konvoy-targets/src/: lib.rs
crates/konvoy-util/: Cargo.toml
crates/konvoy-util/src/: artifact.rs  download.rs  error.rs  fs.rs  hash.rs  lib.rs  maven.rs  metadata.rs  module_metadata.rs  naming.rs  net.rs  path.rs  pom.rs  process.rs  progress.rs  test_util.rs  text.rs
docs/: code-style.md
docs/agents/: architect.md  implementer.md  reviewer.md  tester.md  workflow.md
docs/superpowers/specs/: 2026-06-07-codegen-smoke-tests-design.md
editors/code/: .eslintrc.json  .vscodeignore  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/code/schemas/: konvoy-toml.schema.json
editors/code/src/: commands.ts  diagnostics.ts  extension.ts  konvoyBinary.ts  outputChannel.ts  profileManager.ts  taskProvider.ts  tomlSupport.ts  variantManager.ts  workspaceDetector.ts
editors/code/src/test/: runTests.ts
editors/code/src/test/fixture/: konvoy.toml
editors/code/src/test/suite/: commands.test.ts  diagnostics.test.ts  extension.test.ts  index.ts  konvoyBinary.test.ts  outputChannel.test.ts  packageJson.test.ts  profileManager.test.ts  taskProvider.test.ts  testHelpers.ts  tomlSupport.test.ts  variantManager.test.ts  workspaceDetector.test.ts
editors/code/syntaxes/: konvoy-toml.tmLanguage.json
editors/intellij/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/intellij/src/main/kotlin/com/konvoy/ide/config/: KonvoyLockfile.kt  KonvoyManifest.kt  KonvoyTargets.kt  KonvoyTomlParser.kt
editors/intellij/src/main/kotlin/com/konvoy/ide/run/: KonvoyCommandLineArgs.kt  KonvoyConfigurationType.kt  KonvoyConsoleFilterProvider.kt  KonvoyPsiUtils.kt  KonvoyRunConfiguration.kt  KonvoyRunConfigurationProducer.kt  KonvoyRunFactories.kt  KonvoyRunLineMarkerContributor.kt  KonvoySettingsEditor.kt  KonvoyTestLineMarkerContributor.kt
editors/intellij/src/main/kotlin/com/konvoy/ide/sdk/: KonvoySdkType.kt
editors/intellij/src/main/kotlin/com/konvoy/ide/sync/: KonvoyBuildSystemTypeDetector.kt  KonvoyFileListener.kt  KonvoyGenerateAction.kt  KonvoyGeneratedSources.kt  KonvoyKotlinProjectConfigurator.kt  KonvoyProjectService.kt  KonvoyStartupActivity.kt  KonvoySyncAction.kt  KonvoyWorkspaceModelUpdater.kt
editors/intellij/src/main/kotlin/com/konvoy/ide/toml/: KonvoyCheck.kt  KonvoyTomlAnnotator.kt  KonvoyTomlCheckAnnotator.kt  KonvoyTomlCompletionContributor.kt  KonvoyTomlDocumentationProvider.kt  KonvoyTomlLineMarkerProvider.kt  KonvoyTomlPsiUtils.kt  KonvoyTomlReferenceContributor.kt  KonvoyTomlSchema.kt
editors/intellij/src/test/kotlin/com/konvoy/ide/config/: KonvoyCodegenPsiTest.kt  KonvoyTomlParserTest.kt
editors/intellij/src/test/kotlin/com/konvoy/ide/run/: KonvoyCommandLineArgsTest.kt  KonvoyPluginXmlTest.kt  KonvoyPsiUtilsTest.kt  KonvoyRunConfigurationCommandLineTest.kt
editors/intellij/src/test/kotlin/com/konvoy/ide/sync/: KonvoyGeneratedSourcesTest.kt
editors/intellij/src/test/kotlin/com/konvoy/ide/toml/: KonvoyCheckParseTest.kt  KonvoyCodegenAnnotatorTest.kt  KonvoyCodegenDocTest.kt  KonvoyTomlKeyPathTest.kt  KonvoyTomlSchemaTest.kt
libraries/: kotlinx-atomicfu.toml  kotlinx-coroutines.toml  kotlinx-datetime.toml  kotlinx-io.toml
plugins/: serialization.toml
tests/smoke/: Dockerfile  run.sh  tests.sh
