[package]
name = "konvoy-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
konvoy-util.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
