[package]
name = "konvoy-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
konvoy-config.workspace = true
konvoy-konanc.workspace = true
konvoy-targets.workspace = true
konvoy-util.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
