[package]
name = "konvoy-util"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
glob.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
